docs: expand thread model notes